fixed letter spacing

--- a/src/assets/scss/core/sections/_hero.scss
+++ b/src/assets/scss/core/sections/_hero.scss
@@ -22,7 +22,7 @@
   h1 {
     font-size: 57px !important;
     line-height: 59px !important;
-    letter-spacing: 0px;
+    letter-spacing: -1px;
   }
 }
 
